--- a/Jupiter/packages.config
+++ b/Jupiter/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Azure.Core" version="1.5.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.2.2" targetFramework="net472" />
+  <package id="Azure.Security.KeyVault.Keys" version="4.0.0" targetFramework="net472" />
   <package id="Azure.Security.KeyVault.Secrets" version="4.1.0" targetFramework="net472" />
   <package id="Azure.Storage.Blobs" version="12.6.0" targetFramework="net472" />
   <package id="Azure.Storage.Common" version="12.5.2" targetFramework="net472" />
@@ -11,6 +12,8 @@
   <package id="Microsoft.Azure.Services.AppAuthentication" version="1.5.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.Azure" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.AzureKeyVault" version="3.1.7" targetFramework="net472" />
