--- a/Jupiter/Jupiter.csproj
+++ b/Jupiter/Jupiter.csproj
@@ -266,6 +266,7 @@
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="MasterPageAdmin.Master" />
     <None Include="Properties\PublishProfiles\JupiterJazz.pubxml" />
+    <None Include="Properties\PublishProfiles\ldb - Web Deploy.pubxml" />
     <None Include="scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="scripts\jquery-3.4.1.js" />
     <Content Include="scripts\jquery-3.4.1.min.js" />
