--- a/Jupiter/packages.config
+++ b/Jupiter/packages.config
@@ -14,6 +14,8 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Azure" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.AzureKeyVault" version="3.1.7" targetFramework="net472" />
@@ -48,5 +50,4 @@
   <package id="System.Text.Json" version="4.7.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
