--- a/Jupiter/packages.config
+++ b/Jupiter/packages.config
@@ -6,6 +6,8 @@
   <package id="Azure.Security.KeyVault.Secrets" version="4.1.0" targetFramework="net472" />
   <package id="Azure.Storage.Blobs" version="12.6.0" targetFramework="net472" />
   <package id="Azure.Storage.Common" version="12.5.2" targetFramework="net472" />
+  <package id="Azure.Storage.Files.Shares" version="12.0.1" targetFramework="net472" />
+  <package id="Azure.Storage.Queues" version="12.1.1" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault" version="3.0.5" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.5" targetFramework="net472" />
@@ -16,15 +18,20 @@
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Azure" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.AzureKeyVault" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Json" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.UserSecrets" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.16.1" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.12.0" targetFramework="net472" />
